--- a/map.html
+++ b/map.html
@@ -10,7 +10,8 @@
         <h1>Geomap</h1>
 
         <div id="geomap"></div>
-        <script src="http://d3js.org/topojson.min.js"></script>
+        <script src="https://d3js.org/topojson.v1.min.js"></script>
         <script src="https://d3js.org/d3.v6.js"></script>
+        <script src="js/activity2.js"></script>
     </body>
 </html>
